--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An App Store Connect API client for Node.js",
   "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aaron Sky <aaronsky@skyaaron.com>",
@@ -16,6 +17,7 @@
     "node": ">=8.0.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/node": "^10.12.2",
     "@types/request": "^2.48.1",
     "husky": "^1.2.1",
@@ -28,8 +30,8 @@
     "jsonwebtoken": "^8.3.0"
   },
   "husky": {
-      "hooks": {
-          "pre-commit": "pretty-quick --staged"
-      }
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
