--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     },
     "compileOnSave": true,
     "include": ["lib/**/*.ts", "lib/**/*.d.ts"],
-    "exclude": ["node_modules", "dist"]  
+    "exclude": ["node_modules", "dist", "examples"]
 }
