--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.3.0",
+    "@types/luxon": "^1.4.1",
     "@types/node": "^10.12.2",
     "@types/request": "^2.48.1",
     "husky": "^1.2.1",
@@ -27,7 +28,8 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "jsonwebtoken": "^8.3.0"
+    "jsonwebtoken": "^8.3.0",
+    "luxon": "^1.8.3"
   },
   "husky": {
     "hooks": {
