--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "author": "Aaron Sky <aaronsky@skyaaron.com>",
   "license": "MIT",
@@ -20,19 +20,44 @@
     "node": ">=8.0.0"
   },
   "devDependencies": {
+    "@types/got": "^9.3.0",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/luxon": "^1.4.1",
+    "@types/nock": "^9.3.0",
     "@types/node": "^10.12.2",
-    "@types/request": "^2.48.1",
+    "@types/qs": "^6.5.1",
+    "@types/sinon": "^7.0.3",
+    "ava": "^1.0.1",
     "husky": "^1.2.1",
+    "nock": "^10.0.6",
     "prettier": "^1.15.3",
     "pretty-quick": "^1.8.0",
-    "request": "^2.88.0",
+    "sinon": "^7.2.2",
+    "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
   },
   "dependencies": {
+    "got": "^9.5.0",
     "jsonwebtoken": "^8.3.0",
-    "luxon": "^1.8.3"
+    "luxon": "^1.8.3",
+    "qs": "^6.6.0"
+  },
+  "ava": {
+    "files": [
+      "test/**/*.test.ts"
+    ],
+    "extensions": [
+      "ts"
+    ],
+    "sources": [
+      "**/*.ts",
+      "!dist/**/*"
+    ],
+    "compileEnhancements": false,
+    "require": [
+      "ts-node/register",
+      "./test/index.ts"
+    ]
   },
   "husky": {
     "hooks": {
