--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "ava"
+    "test": "ava",
+    "prepare" : "npm run build"
   },
   "author": "Aaron Sky <aaronsky@skyaaron.com>",
   "license": "MIT",
